tests/testcases/errors/bce0080.boo
"""
bce0080.boo(5,5): BCE0080: 'len' builtin function cannot be used as an expression.
bce0080.boo(6,7): BCE0080: '__addressof__' builtin function cannot be used as an expression.
"""
a = len
print(__addressof__)
